fixup api spec. make it work
