# openapi.yaml
@@ -35,10 +35,6 @@ paths:
                 properties:
                   result:
                     "$ref": "#/components/schemas/ServicePostResponse"
-                  status:
-                    type: number
-                    description: HTTP status code.
-                    example: 200
         '400':
           description: The server cannot or will not process the request due to something
             that is perceived to be a client error.
@@ -47,10 +43,6 @@ paths:
               schema:
                 type: object
                 properties:
-                  status:
-                    type: number
-                    description: HTTP status code.
-                    example: 400
                   error:
                     type: string
                     description: Detailed error description.
@@ -85,10 +77,6 @@ paths:
                 properties:
                   result:
                     "$ref": "#/components/schemas/Service"
-                  status:
-                    type: number
-                    description: HTTP status code.
-                    example: 200
         '400':
           description: The server cannot or will not process the request due to something
             that is perceived to be a client error.
@@ -97,10 +85,6 @@ paths:
               schema:
                 type: object
                 properties:
-                  status:
-                    type: number
-                    description: HTTP status code.
-                    example: 400
                   error:
                     type: string
                     description: Detailed error description.
@@ -139,10 +123,6 @@ paths:
                 properties:
                   result:
                     "$ref": "#/components/schemas/Service"
-                  status:
-                    type: number
-                    description: HTTP status code.
-                    example: 200
         '400':
           description: The server cannot or will not process the request due to something
             that is perceived to be a client error.
@@ -151,10 +131,6 @@ paths:
               schema:
                 type: object
                 properties:
-                  status:
-                    type: number
-                    description: HTTP status code.
-                    example: 400
                   error:
                     type: string
                     description: Detailed error description.
@@ -216,10 +192,6 @@ paths:
                 properties:
                   result:
                     "$ref": "#/components/schemas/Service"
-                  status:
-                    type: number
-                    description: HTTP status code.
-                    example: 200
         '400':
           description: The server cannot or will not process the request due to something
             that is perceived to be a client error.
@@ -228,10 +200,6 @@ paths:
               schema:
                 type: object
                 properties:
-                  status:
-                    type: number
-                    description: HTTP status code.
-                    example: 400
                   error:
                     type: string
                     description: Detailed error description.
@@ -271,10 +239,6 @@ paths:
                 properties:
                   result:
                     "$ref": "#/components/schemas/Service"
-                  status:
-                    type: number
-                    description: HTTP status code.
-                    example: 200
         '400':
           description: The server cannot or will not process the request due to something
             that is perceived to be a client error.
@@ -283,10 +247,6 @@ paths:
               schema:
                 type: object
                 properties:
-                  status:
-                    type: number
-                    description: HTTP status code.
-                    example: 400
                   error:
                     type: string
                     description: Detailed error description.
@@ -324,10 +284,6 @@ paths:
                 properties:
                   result:
                     "$ref": "#/components/schemas/ServicePasswordPatchResponse"
-                  status:
-                    type: number
-                    description: HTTP status code.
-                    example: 200
         '400':
           description: The server cannot or will not process the request due to something
             that is perceived to be a client error.
@@ -336,10 +292,6 @@ paths:
               schema:
                 type: object
                 properties:
-                  status:
-                    type: number
-                    description: HTTP status code.
-                    example: 400
                   error:
                     type: string
                     description: Detailed error description.
@@ -374,10 +326,6 @@ paths:
                     type: array
                     items:
                       "$ref": "#/components/schemas/Backup"
-                  status:
-                    type: number
-                    description: HTTP status code.
-                    example: 200
         '400':
           description: The server cannot or will not process the request due to something
             that is perceived to be a client error.
@@ -386,10 +334,6 @@ paths:
               schema:
                 type: object
                 properties:
-                  status:
-                    type: number
-                    description: HTTP status code.
-                    example: 400
                   error:
                     type: string
                     description: Detailed error description.
@@ -429,10 +373,6 @@ paths:
                 properties:
                   result:
                     "$ref": "#/components/schemas/Backup"
-                  status:
-                    type: number
-                    description: HTTP status code.
-                    example: 200
         '400':
           description: The server cannot or will not process the request due to something
             that is perceived to be a client error.
@@ -441,10 +381,6 @@ paths:
               schema:
                 type: object
                 properties:
-                  status:
-                    type: number
-                    description: HTTP status code.
-                    example: 400
                   error:
                     type: string
                     description: Detailed error description.
@@ -472,10 +408,6 @@ paths:
                     type: array
                     items:
                       "$ref": "#/components/schemas/ApiKey"
-                  status:
-                    type: number
-                    description: HTTP status code.
-                    example: 200
         '400':
           description: The server cannot or will not process the request due to something
             that is perceived to be a client error.
@@ -484,10 +416,6 @@ paths:
               schema:
                 type: object
                 properties:
-                  status:
-                    type: number
-                    description: HTTP status code.
-                    example: 400
                   error:
                     type: string
                     description: Detailed error description.
@@ -517,10 +445,6 @@ paths:
                 properties:
                   result:
                     "$ref": "#/components/schemas/ApiKeyPostResponse"
-                  status:
-                    type: number
-                    description: HTTP status code.
-                    example: 200
         '400':
           description: The server cannot or will not process the request due to something
             that is perceived to be a client error.
@@ -529,10 +453,6 @@ paths:
               schema:
                 type: object
                 properties:
-                  status:
-                    type: number
-                    description: HTTP status code.
-                    example: 400
                   error:
                     type: string
                     description: Detailed error description.
@@ -565,10 +485,6 @@ paths:
                 properties:
                   result:
                     "$ref": "#/components/schemas/ApiKey"
-                  status:
-                    type: number
-                    description: HTTP status code.
-                    example: 200
         '400':
           description: The server cannot or will not process the request due to something
             that is perceived to be a client error.
@@ -577,10 +493,6 @@ paths:
               schema:
                 type: object
                 properties:
-                  status:
-                    type: number
-                    description: HTTP status code.
-                    example: 400
                   error:
                     type: string
                     description: Detailed error description.
@@ -617,10 +529,6 @@ paths:
                 properties:
                   result:
                     "$ref": "#/components/schemas/ApiKey"
-                  status:
-                    type: number
-                    description: HTTP status code.
-                    example: 200
         '400':
           description: The server cannot or will not process the request due to something
             that is perceived to be a client error.
@@ -629,10 +537,6 @@ paths:
               schema:
                 type: object
                 properties:
-                  status:
-                    type: number
-                    description: HTTP status code.
-                    example: 400
                   error:
                     type: string
                     description: Detailed error description.
@@ -682,10 +586,6 @@ paths:
                     type: array
                     items:
                       "$ref": "#/components/schemas/Member"
-                  status:
-                    type: number
-                    description: HTTP status code.
-                    example: 200
         '400':
           description: The server cannot or will not process the request due to something
             that is perceived to be a client error.
@@ -694,10 +594,6 @@ paths:
               schema:
                 type: object
                 properties:
-                  status:
-                    type: number
-                    description: HTTP status code.
-                    example: 400
                   error:
                     type: string
                     description: Detailed error description.
@@ -731,10 +627,6 @@ paths:
                 properties:
                   result:
                     "$ref": "#/components/schemas/Member"
-                  status:
-                    type: number
-                    description: HTTP status code.
-                    example: 200
         '400':
           description: The server cannot or will not process the request due to something
             that is perceived to be a client error.
@@ -743,10 +635,6 @@ paths:
               schema:
                 type: object
                 properties:
-                  status:
-                    type: number
-                    description: HTTP status code.
-                    example: 400
                   error:
                     type: string
                     description: Detailed error description.
@@ -784,10 +672,6 @@ paths:
                 properties:
                   result:
                     "$ref": "#/components/schemas/Member"
-                  status:
-                    type: number
-                    description: HTTP status code.
-                    example: 200
         '400':
           description: The server cannot or will not process the request due to something
             that is perceived to be a client error.
@@ -796,10 +680,6 @@ paths:
               schema:
                 type: object
                 properties:
-                  status:
-                    type: number
-                    description: HTTP status code.
-                    example: 400
                   error:
                     type: string
                     description: Detailed error description.
@@ -849,10 +729,6 @@ paths:
                     type: array
                     items:
                       "$ref": "#/components/schemas/Invitation"
-                  status:
-                    type: number
-                    description: HTTP status code.
-                    example: 200
         '400':
           description: The server cannot or will not process the request due to something
             that is perceived to be a client error.
@@ -861,10 +737,6 @@ paths:
               schema:
                 type: object
                 properties:
-                  status:
-                    type: number
-                    description: HTTP status code.
-                    example: 400
                   error:
                     type: string
                     description: Detailed error description.
@@ -895,10 +767,6 @@ paths:
                 properties:
                   result:
                     "$ref": "#/components/schemas/Invitation"
-                  status:
-                    type: number
-                    description: HTTP status code.
-                    example: 200
         '400':
           description: The server cannot or will not process the request due to something
             that is perceived to be a client error.
@@ -907,10 +775,6 @@ paths:
               schema:
                 type: object
                 properties:
-                  status:
-                    type: number
-                    description: HTTP status code.
-                    example: 400
                   error:
                     type: string
                     description: Detailed error description.
@@ -943,10 +807,6 @@ paths:
                 properties:
                   result:
                     "$ref": "#/components/schemas/Invitation"
-                  status:
-                    type: number
-                    description: HTTP status code.
-                    example: 200
         '400':
           description: The server cannot or will not process the request due to something
             that is perceived to be a client error.
@@ -955,10 +815,6 @@ paths:
               schema:
                 type: object
                 properties:
-                  status:
-                    type: number
-                    description: HTTP status code.
-                    example: 400
                   error:
                     type: string
                     description: Detailed error description.
@@ -1007,10 +863,6 @@ paths:
                     type: array
                     items:
                       "$ref": "#/components/schemas/Activity"
-                  status:
-                    type: number
-                    description: HTTP status code.
-                    example: 200
         '400':
           description: The server cannot or will not process the request due to something
             that is perceived to be a client error.
@@ -1019,10 +871,6 @@ paths:
               schema:
                 type: object
                 properties:
-                  status:
-                    type: number
-                    description: HTTP status code.
-                    example: 400
                   error:
                     type: string
                     description: Detailed error description.
@@ -1054,10 +902,6 @@ paths:
                 properties:
                   result:
                     "$ref": "#/components/schemas/Activity"
-                  status:
-                    type: number
-                    description: HTTP status code.
-                    example: 200
         '400':
           description: The server cannot or will not process the request due to something
             that is perceived to be a client error.
@@ -1066,10 +910,6 @@ paths:
               schema:
                 type: object
                 properties:
-                  status:
-                    type: number
-                    description: HTTP status code.
-                    example: 400
                   error:
                     type: string
                     description: Detailed error description.
@@ -1090,6 +930,10 @@ components:
           type: number
           description: Numeric port
     IpAccessListEntry:
+      type: object
+      required:
+        - source
+        - description
       properties:
         source:
           type: string
@@ -1416,8 +1260,6 @@ components:
         - region
         - tier
         - ipAccessList
-        - minTotalMemoryGb
-        - maxTotalMemoryGb
         - idleScaling
         - idleTimeoutMinutes
       properties:
@@ -1649,5 +1491,16 @@ components:
     APIKey:
       type: http
       scheme: basic
+x-speakeasy-retries:
+  strategy: backoff
+  backoff:
+    initialInterval: 5000 # 5 seconds
+    maxInterval: 60000 # 60 seconds
+    maxElapsedTime: 150000 # 2.5 minutes
+    exponent: 1.5
+  statusCodes:
+    - 4XX
+    - 5XX
+  retryConnectionErrors: true
 security:
   - APIKey: []
